--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
     "axios": "^1.1.2",
-    "next": "12.3.1",
+    "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.55.0"
