--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.55.0"
+    "saas": "^1.0.0",
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "eslint": "8.24.0",
