--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prod": "next export"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -16,7 +17,6 @@
     "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "saas": "^1.0.0",
     "sass": "^1.57.1"
   },
   "devDependencies": {
