--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint",
-    "prod": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
