--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.8",
     "axios": "^1.1.2",
+    "fa-icons": "^0.2.0",
     "next": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
