--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && cp -R ./.next/static ./out/_next/static/",
     "start": "next start",
     "lint": "next lint"
   },
